# review

./: README.md
6月/: 5号.md
6月/workspace/SolidworksMCP-python-main/: .dockerignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  api_state_response.json  check_schema.py  dev-commands.ps1  inspect_checkpoints.py  install-windows.ps1  install.sh  mkdocs.yml  pyproject.toml  run-ci-local.ps1  run-mcp.ps1  run-ui.ps1  show_l_bracket_script.py  solidworks_mcp.yml  test_api_response.py  test_docs_discovery_run.py  test_workflow_fields.py  uninstall.sh
6月/workspace/SolidworksMCP-python-main/.ci/: Dockerfile
6月/workspace/SolidworksMCP-python-main/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
6月/workspace/SolidworksMCP-python-main/.github/skills/extract-and-test/: SKILL.md
6月/workspace/SolidworksMCP-python-main/.github/skills/feature-tree-reconstruction/: SKILL.md
6月/workspace/SolidworksMCP-python-main/.github/workflows/: ci.yml  deploy-docs.yml
6月/workspace/SolidworksMCP-python-main/docs/: gen_ref_pages.py  index.md
6月/workspace/SolidworksMCP-python-main/docs/agents/: ai-assisted-design-workflow.md  family-gated-tool-routing.md  prompt-driven-design.md  pydantic-ai-and-schemas.md
6月/workspace/SolidworksMCP-python-main/docs/getting-started/: claude-code-setup.md  installation.md  local-llm.md  quickstart.md  solidworks-as-code.md  tutorial-tracks.md  vscode-mcp-setup.md
6月/workspace/SolidworksMCP-python-main/docs/getting-started/tutorial-parts/: build_u_bracket_artifact.py  build_u_bracket_runbook.py  build_yoke_female_artifact.py  build_yoke_male_artifact.py  build_yoke_male_checkpoint2.py  build_yoke_male_tutorial.py  read_yoke_female_geometry.py  read_yoke_geometry.py  u_bracket_from_prompt.SLDPRT  u_joint_rebuild_prompt.md  yoke_female_from_prompt.SLDPRT  yoke_male_checkpoint2.SLDPRT  yoke_male_checkpoint_preStub.SLDPRT  yoke_male_from_prompt.SLDPRT  yoke_male_v2_from_prompt.SLDPRT  yoke_male_wrong_stub.SLDPRT
6月/workspace/SolidworksMCP-python-main/docs/getting-started/tutorials/: build_u_bracket_direct.py  u-joint-assembly-build.md
6月/workspace/SolidworksMCP-python-main/docs/javascripts/: extra.js  mathjax.js
6月/workspace/SolidworksMCP-python-main/docs/source/: conf.py
6月/workspace/SolidworksMCP-python-main/docs/stylesheets/: extra.css
6月/workspace/SolidworksMCP-python-main/docs/user-guide/: architecture.md  platform-connectivity.md  real-tool-validation-matrix.md  tools-overview.md
6月/workspace/SolidworksMCP-python-main/docs/user-guide/tool-catalog/: analysis.md  automation.md  index.md  sketching.md
6月/workspace/SolidworksMCP-python-main/examples/configurations/: security_config.py
6月/workspace/SolidworksMCP-python-main/examples/prefab_cad_assistant/: cad_assistant_dashboard.py
6月/workspace/SolidworksMCP-python-main/scripts/: demo_sketches.py  demo_sweep_loft.py
6月/workspace/SolidworksMCP-python-main/scripts/docs/: audit-docs.ps1  build-docs.ps1
6月/workspace/SolidworksMCP-python-main/src/solidworks_mcp/: __init__.py  config.py  exceptions.py  server.py  server_cli_fixed.py  version.py
6月/workspace/SolidworksMCP-python-main/src/solidworks_mcp/adapters/: __init__.py  base.py  circuit_breaker.py  com_executor.py  complexity_analyzer.py  connection_pool.py  factory.py  intelligent_router.py  mock_adapter.py  pywin32_adapter.py  sw_type_info.py  vba_adapter.py  vba_macro_executor.py
6月/workspace/SolidworksMCP-python-main/src/solidworks_mcp/agents/: __init__.py  harness.py  history_db.py  retrieval_index.py  schemas.py  smoke_test.py  soc_exporter.py  soc_pickup.py  soc_rewind.py  vector_rag.py
6月/workspace/SolidworksMCP-python-main/src/solidworks_mcp/cache/: __init__.py  response_cache.py
6月/workspace/SolidworksMCP-python-main/src/solidworks_mcp/security/: __init__.py  auth.py  cors.py  rate_limiting.py  runtime.py
6月/workspace/SolidworksMCP-python-main/src/solidworks_mcp/tools/: __init__.py  analysis.py  automation.py  docs_discovery.py  drawing.py  drawing_analysis.py  export.py  file_management.py  input_compat.py  macro_recording.py  modeling.py  sketching.py  template_management.py  vba_generation.py
6月/workspace/SolidworksMCP-python-main/src/solidworks_mcp/ui/: __init__.py  local_llm.py  prefab_dashboard.py  prefab_smoke_fetch.py  prefab_smoke_minimal.py  prefab_smoke_table.py  prefab_trace_probe.py  schemas.py  server.py  service.py
6月/workspace/SolidworksMCP-python-main/src/solidworks_mcp/utils/: __init__.py  feature_tree_classifier.py  logging.py  validation.py
6月/workspace/SolidworksMCP-python-main/src/utils/: convert_step_to_sldprt.py  generate_tool_catalog.py  screenshot_compare.py  start_local_server.py  validate_coverage.py  verify_tool_count.py
6月/workspace/SolidworksMCP-python-main/tests/: __init__.py  conftest.py  test_coverage_pywin32_adapter_ext.py  test_coverage_vector_rag_extended.py  test_live_sw_regression.py  test_sketch_composition.py
6月/workspace/SolidworksMCP-python-main/tests/scripts/: cleanup_generated_integration_artifacts.py
6月/workspace/SolidworksMCP-python-main/tests/solidworks_mcp/: test_all_endpoints_harness.py  test_architecture_runtime_features.py  test_config.py  test_config_server_init_coverage.py  test_coverage_gaps.py  test_exceptions.py  test_integration.py  test_real_solidworks_integration.py  test_server.py  test_server_cli_fixed.py  test_smoke_agents_live.py  test_solidworks_mixins_coverage.py  test_version.py
6月/workspace/SolidworksMCP-python-main/tests/solidworks_mcp/adapters/: test_adapters.py  test_base.py  test_circuit_breaker.py  test_com_executor.py  test_complexity_analyzer.py  test_connection_pool.py  test_connection_pool_coverage.py  test_coverage.py  test_factory.py  test_factory_coverage.py  test_intelligent_router.py  test_mock_adapter.py  test_pywin32_adapter.py  test_sw_type_info.py  test_vba_adapter.py  (+1 more)
6月/workspace/SolidworksMCP-python-main/tests/utils/: test_generate_tool_catalog.py  test_screenshot_compare.py  test_start_local_server.py  test_validate_coverage.py  test_verify_tool_count.py
(+143 files in other folders)
